--- a/fetch/style.css
+++ b/fetch/style.css
@@ -1,34 +1,34 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    padding: 0;
-    background-color: #f0f0f0;
-}
-
-header {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
+/* Estilos adicionales para las tarjetas de personajes */
 .characterList {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-article {
-    background-color: #fff;
-    padding: 15px;
-    border-radius: 8px;
+.elemento-hijo {
+    flex: 1 1 300px; /* Ajusta el tamaño de las tarjetas según el diseño */
+    margin: 10px;
+    padding: 20px;
+    background-color: #f9f9f9; /* Color de fondo similar al utilizado en las cajas de tu página */
+    border: 1px solid #00000067;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    text-align: center;
 }
 
-img {
-    width: 100%;
-    border-radius: 8px;
+.elemento-hijo .img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
     margin-bottom: 10px;
 }
 
-p {
+.elemento-hijo h3 {
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+.elemento-hijo p {
     margin: 5px 0;
+    font-size: 16px;
 }
