--- a/fetch/style.css
+++ b/fetch/style.css
@@ -1,4 +1,3 @@
-/* Estilos adicionales para las tarjetas de personajes */
 .characterList {
     display: flex;
     flex-wrap: wrap;
@@ -6,10 +5,10 @@
 }
 
 .elemento-hijo {
-    flex: 1 1 300px; /* Ajusta el tamaño de las tarjetas según el diseño */
+    flex: 1 1 300px; 
     margin: 10px;
     padding: 20px;
-    background-color: #f9f9f9; /* Color de fondo similar al utilizado en las cajas de tu página */
+    background-color: #f9f9f9; 
     border: 1px solid #00000067;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
